--- a/.github/workflows/Demo/demo.yml
+++ b/.github/workflows/Demo/demo.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Print to console 
-      run: echo Hello GH Actions!
+      run: echo Hello!
 
 
 
